navbar hidden in phone

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
 
-            <ul class="navbar-bottom-nav  border-top">
+            <ul class="navbar-bottom-nav  border-top d-none">
                 <div class="d-flex mx-auto">
                     <li>
                         <a href="index.html">home</a>
