--- a/Our-Team.html
+++ b/Our-Team.html
@@ -51,11 +51,11 @@
                             <h5 class="">View site / profile</h5>
                         </div>
                         <ul class="p-0">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
+                        </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
+                                <a class="nav-link active" aria-current="page" href="About-Us.html">About-us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="categories.html">Categeory</a>
@@ -63,7 +63,19 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="cart.html">Cart</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link" href="Projects.html">Project</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Our-Team.html">Our Teem</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="faq.html">FAQ's</a>
+                            </li>
+    
                             <div class="accordion accordion-flush" id="accordionFlushExample">
                                 <div class="accordion-item ">
                                     <h2 class="accordion-header" id="flush-headingOne">
@@ -91,19 +103,6 @@
                                         <div class="accordion-body">onstrate</div>
                                     </div>
                                 </div>
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="flush-headingThree">
-                                        <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
-                                            aria-expanded="false" aria-controls="flush-collapseThree">
-                                            Whishlist
-                                        </button>
-                                    </h2>
-                                    <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Page2</div>
-                                    </div>
-                                </div>
                             </div>
                         </ul>
                         <ul class="offcanvas-social-icons p-0">
@@ -126,8 +125,8 @@
                         </div>
                     </div>
                 </div>
-
-                <ul class="navbar-bottom-nav  border-top">
+    
+                <ul class="navbar-bottom-nav  border-top d-none d-md-flex ">
                     <div class="d-flex mx-auto">
                         <li>
                             <a href="index.html">home</a>
@@ -152,7 +151,7 @@
                         </li>
                     </div>
                 </ul>
-                <div class="text-center header-input-body mx-auto">
+                <div class="text-center header-input-body mx-auto py-2 py-md-0">
                     <input type="text" class="header-input h-100" placeholder="Search Products Here" name="" id="">
                     <div class="header-input-body-glass">
                         <a href="" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
