--- a/cart.html
+++ b/cart.html
@@ -13,152 +13,151 @@
 
 <body>
 
-  <header>
-    <section class="navbar-section">
-        <div class="container">
-            <div class="d-flex justify-content-between">
-                <a class="fs-3 hammer" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-                    aria-controls="offcanvasExample">
-                    <i class="fa-solid fa-bars searchglass"></i>
-                </a>
-                <div class="nav-sign-btn">
-                    <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
+    <header>
+        <section class="navbar-section">
+            <div class="container">
+                <div class="d-flex justify-content-between">
+                    <a class="fs-3 hammer" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                        aria-controls="offcanvasExample">
+                        <i class="fa-solid fa-bars searchglass"></i>
+                    </a>
+                    <div class="nav-sign-btn">
+                        <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
+                    </div>
+                    <div class="nav-sign-btn">
+                        <a href="Login-page.html" class="btn">Login</a>
+                        <a href="Sign-up.html" class="btn">Register</a>
+                    </div>
                 </div>
-                <div class="nav-sign-btn">
-                    <a href="Login-page.html" class="btn">Login</a>
-                    <a href="Sign-up.html" class="btn">Register</a>
-                </div>
-            </div>
-            <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
-                aria-labelledby="offcanvasExampleLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href="javascript:void(0)"><i
-                                class="fa-solid fa-magnifying-glass text-dark fs-4"></i></a></h5>
-                    <button type="button" class="btn-close " data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <div class="mb-3 border-2  d-flex align-items-center">
-                        <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
-                        <div class="text-white  profile-owner ms-2">
-                            <h4>Personal Account</h4>
-                            <span>Personal Account</span>
+                <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
+                    aria-labelledby="offcanvasExampleLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href="javascript:void(0)"><i
+                                    class="fa-solid fa-magnifying-glass text-dark fs-4"></i></a></h5>
+                        <button type="button" class="btn-close " data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <div class="mb-3 border-2  d-flex align-items-center">
+                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
+                            <div class="text-white  profile-owner ms-2">
+                                <h4>Personal Account</h4>
+                                <span>Personal Account</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="view-site-or-profile">
-                        <h5 class="">View site / profile</h5>
-                    </div>
-                    <ul class="p-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
+                        <div class="view-site-or-profile">
+                            <h5 class="">View site / profile</h5>
+                        </div>
+                        <ul class="p-0">
+                          <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="categories.html">Categeory</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="cart.html">Cart</a>
-                        </li>
-
-                        <div class="accordion accordion-flush" id="accordionFlushExample">
-                            <div class="accordion-item ">
-                                <h2 class="accordion-header" id="flush-headingOne">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                                        aria-expanded="false" aria-controls="flush-collapseOne">
-                                        Brand
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Page1</div>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="About-Us.html">About-us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="categories.html">Categeory</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cart.html">Cart</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Projects.html">Project</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Our-Team.html">Our Teem</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="faq.html">FAQ's</a>
+                            </li>
+    
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item ">
+                                    <h2 class="accordion-header" id="flush-headingOne">
+                                        <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                            aria-expanded="false" aria-controls="flush-collapseOne">
+                                            Brand
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                        aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">Page1</div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="flush-headingTwo">
+                                        <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                            aria-expanded="false" aria-controls="flush-collapseTwo">
+                                            All Product
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                        aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">onstrate</div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingTwo">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
-                                        aria-expanded="false" aria-controls="flush-collapseTwo">
-                                        All Product
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">onstrate</div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingThree">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
-                                        aria-expanded="false" aria-controls="flush-collapseThree">
-                                        Whishlist
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Page2</div>
-                                </div>
-                            </div>
+                        </ul>
+                        <ul class="offcanvas-social-icons p-0">
+                            <li>
+                                <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f text-info"></i></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)"><i class="fa-brands fa-instagram text-danger"></i></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)"><i class="fa-brands fa-twitter text-success"></i></a>
+                            </li>
+                        </ul>
+                        <div class="offcanvas-left-call-btn">
+                            <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
+                                    alt="shopimage" width="50px" height="50px">Contact Us</a>
                         </div>
-                    </ul>
-                    <ul class="offcanvas-social-icons p-0">
+                    </div>
+                </div>
+    
+                <ul class="navbar-bottom-nav  border-top d-none d-md-flex ">
+                    <div class="d-flex mx-auto">
                         <li>
-                            <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f text-info"></i></a>
+                            <a href="index.html">home</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)"><i class="fa-brands fa-instagram text-danger"></i></a>
+                            <a href="categories.html">Categeory</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
+                            <a href="About-Us.html">About us</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)"><i class="fa-brands fa-twitter text-success"></i></a>
+                            <a href="blog.html">Blogs</a>
                         </li>
-                    </ul>
-                    <div class="offcanvas-left-call-btn">
-                        <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                alt="shopimage" width="50px" height="50px">Contact Us</a>
+                        <li>
+                            <a href="Projects.html">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="cart.html">Cart</a>
+                        </li>
+                        <li>
+                            <a href="faq.html">FAQ's</a>
+                        </li>
+                    </div>
+                </ul>
+                <div class="text-center header-input-body mx-auto py-2 py-md-0">
+                    <input type="text" class="header-input h-100" placeholder="Search Products Here" name="" id="">
+                    <div class="header-input-body-glass">
+                        <a href="" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
                     </div>
                 </div>
             </div>
-
-            <ul class="navbar-bottom-nav  border-top">
-                <div class="d-flex mx-auto">
-                    <li>
-                        <a href="index.html">home</a>
-                    </li>
-                    <li>
-                        <a href="categories.html">Categeory</a>
-                    </li>
-                    <li>
-                        <a href="About-Us.html">About us</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blogs</a>
-                    </li>
-                    <li>
-                        <a href="Projects.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="cart.html">Cart</a>
-                    </li>
-                    <li>
-                        <a href="faq.html">FAQ's</a>
-                    </li>
-                </div>
-            </ul>
-            <div class="text-center header-input-body mx-auto">
-                <input type="text" class="header-input h-100" placeholder="Search Products Here" name="" id="">
-                <div class="header-input-body-glass">
-                    <a href="javascript:void(0)" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-</header>
+        </section>
+    </header>
 
 
   <section class="main-top-cart-delivery-section">
