--- a/index.html
+++ b/index.html
@@ -56,17 +56,29 @@
                         <h5 class="">View site / profile</h5>
                     </div>
                     <ul class="p-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
+                    </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
+                            <a class="nav-link active" aria-current="page" href="About-Us.html">About-us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="categories.html">Categeory</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="cart.html">Cart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Projects.html">Project</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Our-Team.html">Our Teem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="faq.html">FAQ's</a>
                         </li>
 
                         <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -96,19 +108,6 @@
                                     <div class="accordion-body">onstrate</div>
                                 </div>
                             </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingThree">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
-                                        aria-expanded="false" aria-controls="flush-collapseThree">
-                                        Whishlist
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Page2</div>
-                                </div>
-                            </div>
                         </div>
                     </ul>
                     <ul class="offcanvas-social-icons p-0">
@@ -132,7 +131,7 @@
                 </div>
             </div>
 
-            <ul class="navbar-bottom-nav  border-top d-none">
+            <ul class="navbar-bottom-nav  border-top d-none d-md-flex ">
                 <div class="d-flex mx-auto">
                     <li>
                         <a href="index.html">home</a>
@@ -157,7 +156,7 @@
                     </li>
                 </div>
             </ul>
-            <div class="text-center header-input-body mx-auto">
+            <div class="text-center header-input-body mx-auto py-2 py-md-0">
                 <input type="text" class="header-input h-100" placeholder="Search Products Here" name="" id="">
                 <div class="header-input-body-glass">
                     <a href="" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
@@ -1910,4 +1909,3 @@
 </body>
 
 </html>
-<!-- 2083 -->
