--- a/Projects.html
+++ b/Projects.html
@@ -199,9 +199,8 @@
       <style>
         .Freelancing-section {
           background-image: url(img/freelancing.svg);
-          height: 200px;
+          height: 300px;
           margin: 20px 0px 20px;
-          width: 100%;
           background-size: cover;
           background-repeat: no-repeat;
           position: relative;
@@ -241,17 +240,22 @@
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+          width: 100%;
         }
       </style>
 
       <section class="Freelancing-section">
         <div class="container">
           <div class="Freelancing-section-Body text-center">
+         <div class="row">
+          <div class="col-md-12 col-12">
             <h4 class="mb-3"> i am <span class="freelancing-green-color ">available</span> for freelancing</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod corporis tempora iure </p>
+            <p>Lorem ipsum dolor sit <span class="d-block d-sm-inline">amet consectetur adipisicing elit</span>. </p>
             <div class="Hire-Me-btn">
               <a href="" class="btn">HIRE ME</a>
             </div>
+          </div>
+         </div>
           </div>
 
         </div>
@@ -262,19 +266,19 @@
       <section class="section-work-data">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 text-center">
+            <div class="col-lg-3 col-6 text-center">
               <h2 class="counter-numbers" data-number="2000">0+</h2>
               <p>Project Completed</p>
             </div>
-            <div class="col-lg-3 text-center">
+            <div class="col-lg-3 col-6 text-center">
               <h2 class="counter-numbers" data-number="6000">0+</h2>
               <p>Happy Clients</p>
             </div>
-            <div class="col-lg-3 text-center">
+            <div class="col-lg-3 col-6 text-center">
               <h2 class="counter-numbers" data-number="5000">0+</h2>
               <p>Cup Of Coffee</p>
             </div>
-            <div class="col-lg-3 text-center">
+            <div class="col-lg-3 col-6 text-center">
               <h2 class="counter-numbers" data-number="3000">0+</h2>
               <p>Real Proffessionals</p>
             </div>
