padding remove from footer

--- a/blog.html
+++ b/blog.html
@@ -175,7 +175,7 @@
     <main role="main">
         <section class="blog-section">
             <section>
-                <div class="container-fluid p-0  mb-4">
+                <div class="container-fluid  mb-4">
                     <div class="top-fixed-section reusable-relative text-center">
                         <h1>Blogs</h1>
                         <div class="text-bottom-circle"></div>
@@ -522,7 +522,7 @@
             </div>
         </div>
 
-        <div class="container-fluid p-0">
+        <div class="container-fluid">
             <div class="footer-delevery-process text-white text-center">
                 <div class="row justify-content-center">
                     <div class="col-lg-2 col-6">
