--- a/Our-Team.html
+++ b/Our-Team.html
@@ -465,7 +465,7 @@
             </div>
         </div>
 
-        <div class="container-fluid p-0">
+        <div class="container-fluid">
             <div class="footer-delevery-process text-white text-center">
                 <div class="row justify-content-center">
                     <div class="col-lg-2 col-6">
