profile photo added

--- a/profile.html
+++ b/profile.html
@@ -164,10 +164,10 @@
                 <div class="profile-area">
                     <div class="main-profile">
                         <div class="main-owner">
-                            <img class="rounded-circle" src="img/user-profile.jpg" width="100px" alt="profile-image">
+                            <img class="rounded-circle" src="img/IMG_20220412_182116.jpg" width="100px" alt="profile-image">
                         </div>
                         <div class="profile-detail mx-3">
-                            <h6 class="name">Vijay.</h6>
+                            <h6 class="name">Vijaykumar Yadav.</h6>
                             <span class="profile-detail-id">ID 02123141</span>
                         </div>
                     </div>
