footer remove extra code

--- a/About-Us.html
+++ b/About-Us.html
@@ -426,42 +426,44 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-2 col-6">
                         <i class="fa-solid fa-thumbs-up fs-5 mb-2"></i>
-                        <h6>High Quality</h6>
+                        <h6>Fast & Secure Delivery</h6>
                         <p>
-                            Nullam sed sollicitudin mauris velit id venenatis morbi
+                            Tell about your service.
                         </p>
                     </div>
                     <div class="col-lg-2 col-10">
-                        <i class="fa-solid fa-phone-volume fs-5 mb-2"></i>
-                        <h6>Awesome Support</h6>
+                        <i class="fa-solid fa-sack-dollar fs-5 mb-2"></i>
+                        <h6>Money Back Guarantee</h6>
                         <p>
-                            Nullam sed sollicitudin mauris velit id venenatis morbi </p>
+                            Within 10 days. </p>
                     </div>
 
                     <div class="col-lg-2 col-6">
                         <i class="fa-solid fa-truck fs-5 mb-2"></i>
-                        <h6>Really Fast Delivery</h6>
+                        <h6>24 Hour Return Policy</h6>
                         <p>
-                            Nullam sed sollicitudin mauris velit id venenatis morbi
+                            No question ask.
                         </p>
                     </div>
                     <div class="col-lg-2 col-10">
                         <i class="fa-solid fa-right-left fs-5 mb-2"></i>
-                        <h6>14-Day Returns</h6>
+                        <h6>
+                            Pro Quality Support</h6>
                         <p>
-                            Nullam sed sollicitudin mauris velit id venenatis morbi
+                            24/7 Live support.
                         </p>
                     </div>
                     <div class="col-lg-2 col-6">
                         <i class="fa-solid fa-lock fs-5 mb-2"></i>
                         <h6>Secure Checkout</h6>
                         <p>
-                            Nullam sed sollicitudin mauris velit id venenatis morbi
+                            full Guarantee
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="copyright-section">
             <div class="container">
                 <div class="row text-center">
@@ -487,6 +489,7 @@
             </div>
         </div>
     </footer>
+
 
     <script src="js/bootstrap.bundle.js"></script>
     <script src="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/js/all.min.js"></script>
