--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -219,7 +219,7 @@
               justify-content: center;
               align-items: center;
             }
-
+            
             .swiper-slide img {
               display: block;
               width: 100%;
@@ -636,8 +636,8 @@
         <div class="row footer-top">
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="footer-left-sec">
-                    <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
-                        width="160px" height="200px">
+                    <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage" width="160px"
+                        height="200px">
                     <p class="text-center">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
                         aperiam.
@@ -695,7 +695,8 @@
                 <h6>SOME POSTS</h6>
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg"
+                                alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -706,7 +707,8 @@
 
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png"
+                                alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -737,37 +739,38 @@
             <div class="row justify-content-center">
                 <div class="col-lg-2 col-6">
                     <i class="fa-solid fa-thumbs-up fs-5 mb-2"></i>
-                    <h6>High Quality</h6>
+                    <h6>Fast & Secure Delivery</h6>
                     <p>
-                        Nullam sed sollicitudin mauris velit id venenatis morbi
+                        Tell about your service.
                     </p>
                 </div>
                 <div class="col-lg-2 col-10">
-                    <i class="fa-solid fa-phone-volume fs-5 mb-2"></i>
-                    <h6>Awesome Support</h6>
+                    <i class="fa-solid fa-sack-dollar fs-5 mb-2"></i>
+                    <h6>Money Back Guarantee</h6>
                     <p>
-                        Nullam sed sollicitudin mauris velit id venenatis morbi </p>
+                        Within 10 days. </p>
                 </div>
 
                 <div class="col-lg-2 col-6">
                     <i class="fa-solid fa-truck fs-5 mb-2"></i>
-                    <h6>Really Fast Delivery</h6>
+                    <h6>24 Hour Return Policy</h6>
                     <p>
-                        Nullam sed sollicitudin mauris velit id venenatis morbi
+                        No question ask.
                     </p>
                 </div>
                 <div class="col-lg-2 col-10">
                     <i class="fa-solid fa-right-left fs-5 mb-2"></i>
-                    <h6>14-Day Returns</h6>
+                    <h6>
+                        Pro Quality Support</h6>
                     <p>
-                        Nullam sed sollicitudin mauris velit id venenatis morbi
+                        24/7 Live support.
                     </p>
                 </div>
                 <div class="col-lg-2 col-6">
                     <i class="fa-solid fa-lock fs-5 mb-2"></i>
                     <h6>Secure Checkout</h6>
                     <p>
-                        Nullam sed sollicitudin mauris velit id venenatis morbi
+                        full Guarantee
                     </p>
                 </div>
             </div>
