--- a/DeliveryAddress.html
+++ b/DeliveryAddress.html
@@ -474,7 +474,7 @@
                                 </select>
                             </div>
                             <div class="mb-3 text-center">
-                                <a href="javascript:void(0)" class="btn Google-btn"><i
+                                <a href="successfull.html" class="btn Google-btn"><i
                                         class="fa-solid fa-cart-shopping text-info me-2"></i>Continue to payment</a>
                             </div>
                         </div>
