--- a/faq.html
+++ b/faq.html
@@ -376,11 +376,13 @@
                                         <div id="collapseSix" class="accordion-collapse collapse"
                                             data-bs-parent="#accordionExample">
                                             <div class="mt-3">
-                                                <p> Lorem ipsum dolor sit, amet consectetur
+                                                <p>
+                                                    Lorem ipsum dolor sit, amet consectetur
                                                     adipisicing elit. Inventore tenetur cum
                                                     doloremque iusto molestiae. Minus beatae
                                                     quam cumque modi quidem asperiores
-                                                    aliquam pariatur in iste.</p>
+                                                    aliquam pariatur in iste.
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
